Visual fixes per QA testing (#149)
* fix header button colors

* fix a button in sga problem

* fix bookmarks list appearance

* fix setting menu item as a button

* update the layout of the courseware

* fix Design issue/Dashboard/Unenroll: The pop up window has extra space

* fix LMS/Course updates: Inconsistent button style on the Show more button displayed for longer updates

--- a/lms/static/sass/courseware/_course-content-01.scss
+++ b/lms/static/sass/courseware/_course-content-01.scss
@@ -17,7 +17,7 @@ body.view-in-course {
     .container {
 
       .course-wrapper {
-        width: $courseware-content-container-width + $courseware-content-container-sidebar-width * 2 + calcRem(80);
+        width: $courseware-content-container-width + $courseware-content-container-sidebar-width + calcRem(80);
         max-width: 100%;
         margin: 0 auto;
         padding: calcRem(40);
@@ -26,15 +26,24 @@ body.view-in-course {
         box-shadow: none;
 
         &.legacy-nav-enabled {
-          width: $courseware-content-container-width + $courseware-content-container-sidebar-width * 2 + calcRem(80);
+          width: $courseware-content-container-width + $courseware-content-container-sidebar-width + calcRem(80);
           padding: 0;
           display: grid;
-          grid-template-columns: $courseware-content-container-sidebar-width 1fr $courseware-content-container-sidebar-width;
+          // grid-template-columns: $courseware-content-container-sidebar-width 1fr $courseware-content-container-sidebar-width;
+          grid-template-columns: $courseware-content-container-sidebar-width 1fr;
           grid-column-gap: calcRem(40);
+
+          @media (max-width: 1700px) {
+            grid-template-columns: $courseware-content-container-sidebar-width 1fr;
+            padding-left: calcRem(40);
+            padding-right: calcRem(40);
+          }
 
           @media (max-width: $screen-sm-max) {
             grid-template-columns: 1fr;
             grid-gap: calcRem(20);
+            padding-left: calcRem(20);
+            padding-right: calcRem(20);
           }
         }
 
@@ -449,7 +458,6 @@ body.view-in-course {
     a {
       position: relative;
       display: inline;
-      border-bottom: 0px solid rgba($brand-primary-color, 0);
       @include transition(all 0.2s ease-in-out);
 
       &:hover, &:focus {
@@ -866,4 +874,16 @@ body.view-in-course {
 
 .xmodule_display.xmodule_ProblemBlock div.problem .choicegroup label {
   padding-left: calcRem(45);
+}
+
+.course-bookmarks .bookmarks-results-list {
+  margin-top: calcRem(20);
+
+  .bookmarks-results-list-item {
+    padding: 0 calcRem(20) calcRem(30) calcRem(20);
+  }
+
+  .list-item-content {
+    overflow: visible;
+  }
 }
