--- a/lms/static/sass/v2/_new.scss
+++ b/lms/static/sass/v2/_new.scss
@@ -250,6 +250,7 @@
           text-decoration-style: dotted;
           color: $brand-primary-color;
           opacity: 1;
+          background: none;
 
           &:hover, &:focus {
             background: none;
